// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> AWS - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <path
      d="M39.551,23.539c-1.502-2.041-5.774-0.724-7.541-0.063l0.887,2.369c1.838-0.686,4-1.057,4.592-0.801
		c0.051,0.668-1.022,2.693-2.291,4.299l1.984,1.568C38.396,29.378,41.058,25.586,39.551,23.539z"
    />
    <path
      d="M39.43,17.217c0-2.131-1.734-3.864-3.863-3.864h-2.599c-0.735,0-1.334-0.599-1.334-1.334
		s0.599-1.333,1.334-1.333h6.462V8.156h-6.462c-2.13,0-3.862,1.732-3.862,3.862c0,2.131,1.732,3.863,3.862,3.863h2.599
		c0.734,0,1.334,0.6,1.334,1.335s-0.6,1.335-1.334,1.335h-6.461v2.53h6.461C37.695,21.082,39.43,19.347,39.43,17.217z"
    />
    <path
      d="M5.065,21.082h2.599c1,0,1.911-0.387,2.598-1.016c0.688,0.629,1.598,1.016,2.599,1.016v-2.53
		c-0.735,0-1.333-0.6-1.333-1.335v-1.335v-3.863c0-2.13-1.733-3.862-3.863-3.862H2.466v2.529h5.198c0.735,0,1.334,0.598,1.334,1.333
		v1.334H5.065c-2.13,0-3.863,1.733-3.863,3.864C1.202,19.347,2.935,21.082,5.065,21.082z M5.065,15.882h3.933v1.335
		c0,0.735-0.599,1.335-1.334,1.335H5.065c-0.736,0-1.334-0.6-1.334-1.335S4.33,15.882,5.065,15.882z"
    />
    <polygon
      points="12.706,9.76 15.868,21.082 18.43,21.082 20.617,13.253 22.804,21.082 25.365,21.082 28.527,9.76 
		28.526,9.76 28.976,8.156 26.349,8.156 26.092,9.081 24.084,16.266 21.818,8.156 19.415,8.156 17.149,16.266 14.883,8.156 
		12.257,8.156 12.706,9.76 	"
    />
    <path
      d="M19.897,29.313c-11.305,0-18.153-5.913-18.221-5.972l-0.837,0.947L0,25.234
		c0.303,0.27,7.588,6.609,19.897,6.609c6.99,0,12.126-2.002,14.757-3.325l-1.4-2.128C30.768,27.602,26.147,29.313,19.897,29.313z"
    />
  </g>
  <title>
    AWS
  </title>
</svg>
`;

exports[`<Icon /> CodePen - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <path
      d="M20,5.98L6.347,15.277v9.447L20,34.02l13.652-9.296v-9.447L20,5.98z M20,23.396L15.014,20L20,16.604L24.986,20L20,23.396z
		 M20.865,15.101V8.662l10.387,7.072l-4.729,3.219L20.865,15.101z M19.136,15.101l-5.659,3.854l-4.728-3.22l10.387-7.072V15.101z
		 M11.94,20l-3.863,2.631V17.37L11.94,20z M13.477,21.047l5.659,3.853v6.438L8.749,24.266L13.477,21.047z M20.865,24.899
		l5.658-3.853l4.729,3.219l-10.387,7.072V24.899z M28.061,20l3.863-2.63v5.261L28.061,20z"
    />
  </g>
  <title>
    CodePen
  </title>
</svg>
`;

exports[`<Icon /> CodePen - renders 2`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <path
      d="M27.372,10.237L27.372,10.237L20,5.98l-7.372,4.257l0,0l-4.77,2.753v5.507v8.512l7.373,4.257l0,0L20,34.02l12.142-7.01
		v-8.512V12.99L27.372,10.237z M23.901,10.237L20,12.489l-3.901-2.252L20,7.985L23.901,10.237z M20,14.494l5.638-3.254l3.9,2.252
		L20,18.998l-9.537-5.507l3.9-2.252L20,14.494z M13.496,28.261l-3.901-2.253v-4.504l3.901,2.252V28.261z M9.595,19.499v-4.504
		l9.537,5.506v11.014l-3.9-2.253v-6.508L9.595,19.499z M26.505,28.261v-4.505l3.9-2.252v4.504L26.505,28.261z M24.769,22.754v6.508
		l-3.9,2.253V20.501l9.537-5.506v4.504L24.769,22.754z"
    />
  </g>
  <title>
    CodePen
  </title>
</svg>
`;

exports[`<Icon /> Email - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <path
      d="M17.847,22.54c0.572,0.591,1.337,0.916,2.153,0.916c0.815,0,1.581-0.325,2.153-0.916L33.14,11.188
		l0.511-0.528c-0.519-0.959-1.534-1.611-2.698-1.611H9.048c-1.165,0-2.18,0.652-2.698,1.611l0.512,0.528L17.847,22.54z M9.048,10.8
		h21.904c0.038,0,0.074,0.008,0.112,0.011l-10.171,10.51c-0.477,0.494-1.311,0.494-1.787,0L8.936,10.812
		C8.974,10.808,9.009,10.8,9.048,10.8z"
    />
    <path
      d="M32.267,14.609v13.276c0,0.725-0.59,1.314-1.314,1.314H9.048c-0.725,0-1.314-0.59-1.314-1.314V14.609
		l-1.752-1.811v15.087c0,1.69,1.376,3.066,3.066,3.066h21.904c1.691,0,3.066-1.376,3.066-3.066V12.798L32.267,14.609z"
    />
  </g>
  <title>
    Email
  </title>
</svg>
`;

exports[`<Icon /> GitHub - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <g>
      <path
        d="M29.212,20.082c0-1.217-0.371-2.414-1.075-3.48l-0.085-2.852c-0.025-0.872-0.4-1.567-1.029-1.905
			c-0.63-0.339-1.416-0.27-2.158,0.188l-1.752,1.082c-1.963-0.56-4.161-0.561-6.125,0l-1.751-1.082
			c-0.743-0.458-1.53-0.527-2.158-0.188c-0.629,0.339-1.005,1.033-1.03,1.905l-0.085,2.852c-0.704,1.066-1.074,2.264-1.074,3.48
			c0,2.975,2.203,5.622,5.502,6.776c-0.223,0.406-0.371,0.85-0.449,1.311c-0.224,0.125-0.471,0.184-0.781,0.184
			c-0.797,0-1.123-0.373-1.675-1.088c-0.544-0.701-1.288-1.664-2.809-1.664v1.752c0.633,0,0.907,0.32,1.422,0.984
			c0.577,0.746,1.367,1.768,3.062,1.768c0.251,0,0.488-0.025,0.716-0.07v3.346h1.752v-4.514c0-0.703,0.307-1.371,0.841-1.834
			c0.252-0.217,0.358-0.559,0.275-0.881s-0.342-0.57-0.667-0.639c-3.201-0.676-5.437-2.908-5.437-5.43
			c0-0.935,0.312-1.863,0.902-2.685c0.102-0.142,0.159-0.311,0.164-0.485l0.093-3.11c0.008-0.288,0.089-0.401,0.108-0.414
			c0.021-0.01,0.161-0.015,0.407,0.137l2.089,1.29c0.219,0.136,0.488,0.167,0.732,0.087c1.848-0.605,3.979-0.605,5.826,0
			c0.245,0.081,0.513,0.049,0.733-0.087l2.088-1.29c0.245-0.151,0.386-0.146,0.406-0.137c0.02,0.013,0.102,0.127,0.109,0.415
			l0.093,3.11c0.005,0.174,0.062,0.343,0.164,0.485c0.591,0.822,0.903,1.75,0.903,2.685c0,2.522-2.236,4.754-5.438,5.43
			c-0.326,0.068-0.584,0.316-0.667,0.639s0.023,0.664,0.275,0.881c0.534,0.463,0.841,1.131,0.841,1.834v4.488h1.752v-4.488
			c0-0.711-0.181-1.398-0.515-2.008C27.007,25.703,29.212,23.057,29.212,20.082z"
      />
      <path
        d="M20,6.622c-7.729,0-14.019,6.289-14.019,14.02c0,5.509,3.179,10.445,8.148,12.732v-1.967
			c-3.922-2.133-6.396-6.223-6.396-10.765c0-6.764,5.503-12.267,12.267-12.267s12.267,5.502,12.267,12.267
			c0,4.49-2.433,8.554-6.291,10.707v1.967c4.902-2.313,8.043-7.219,8.043-12.673C34.019,12.911,27.729,6.622,20,6.622z"
      />
    </g>
  </g>
  <title>
    GitHub
  </title>
</svg>
`;

exports[`<Icon /> GraphQL - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <path
    d="M36.021,25.146c-0.145-0.082-0.293-0.15-0.443-0.212v-9.869c0.15-0.061,0.299-0.128,0.443-0.213
	c1.699-0.98,2.281-3.153,1.3-4.853c-0.981-1.699-3.153-2.282-4.854-1.299c-0.144,0.083-0.278,0.178-0.406,0.276l-8.546-4.934
	c0.023-0.161,0.039-0.323,0.039-0.49C23.554,1.591,21.963,0,20,0c-1.962,0-3.553,1.591-3.553,3.553c0,0.167,0.015,0.33,0.038,0.49
	L7.939,8.977C7.811,8.879,7.677,8.784,7.533,8.701C5.833,7.718,3.661,8.301,2.68,10c-0.98,1.7-0.399,3.873,1.3,4.853
	c0.146,0.084,0.295,0.152,0.443,0.213v9.869c-0.148,0.062-0.297,0.13-0.443,0.212c-1.7,0.982-2.28,3.154-1.3,4.854
	c0.981,1.699,3.154,2.281,4.854,1.301c0.144-0.084,0.278-0.178,0.406-0.277l8.545,4.934c-0.023,0.16-0.038,0.324-0.038,0.49
	C16.447,38.408,18.037,40,20,40c1.963,0,3.554-1.592,3.554-3.553c0-0.166-0.016-0.33-0.039-0.49l8.546-4.934
	c0.128,0.1,0.263,0.193,0.406,0.277c1.7,0.98,3.872,0.398,4.854-1.301S37.72,26.129,36.021,25.146z M7.089,23.248v-8.181
	c0.709-0.287,1.333-0.8,1.744-1.514c0.412-0.713,0.544-1.509,0.438-2.266l7.085-4.09L7.089,23.248z M22.183,33.647
	c-0.602-0.47-1.359-0.753-2.183-0.753c-0.825,0-1.58,0.282-2.181,0.753l-7.087-4.091h18.535L22.183,33.647z M31.167,26.447
	c-0.084,0.145-0.152,0.293-0.213,0.442H9.046c-0.061-0.149-0.128-0.298-0.212-0.442c-0.083-0.145-0.178-0.277-0.278-0.406
	L19.51,7.069C19.67,7.091,19.833,7.107,20,7.107c0.167,0,0.329-0.016,0.491-0.038l10.954,18.972
	C31.346,26.17,31.249,26.303,31.167,26.447z M32.911,23.248L23.644,7.197l7.085,4.09c-0.106,0.757,0.026,1.553,0.438,2.266
	c0.41,0.713,1.034,1.227,1.744,1.514V23.248z"
  />
  <title>
    GraphQL
  </title>
</svg>
`;

exports[`<Icon /> Instagram - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <g>
      <path
        d="M20,12.553c-4.106,0-7.447,3.341-7.447,7.447c0,4.107,3.341,7.447,7.447,7.447s7.447-3.34,7.447-7.447
			C27.447,15.894,24.106,12.553,20,12.553z M20,25.695c-3.14,0-5.695-2.555-5.695-5.695c0-3.14,2.556-5.695,5.695-5.695
			S25.695,16.86,25.695,20C25.695,23.141,23.14,25.695,20,25.695z"
      />
      <path
        d="M27.842,10.844c-0.344,0-0.685,0.141-0.929,0.386c-0.246,0.245-0.386,0.582-0.386,0.929
			c0,0.344,0.14,0.684,0.386,0.929c0.244,0.245,0.585,0.386,0.929,0.386c0.347,0,0.687-0.141,0.933-0.386
			c0.241-0.245,0.381-0.585,0.381-0.929c0-0.347-0.14-0.687-0.381-0.933C28.528,10.984,28.188,10.844,27.842,10.844z"
      />
      <path
        d="M26.39,5.981H13.61c-4.206,0-7.629,3.422-7.629,7.629v12.78c0,4.206,3.423,7.628,7.629,7.628H26.39
			c4.207,0,7.629-3.422,7.629-7.628V13.61C34.019,9.404,30.597,5.981,26.39,5.981z M32.267,26.391c0,3.24-2.637,5.876-5.877,5.876
			H13.61c-3.241,0-5.877-2.636-5.877-5.876V13.61c0-3.24,2.636-5.876,5.877-5.876H26.39c3.24,0,5.877,2.636,5.877,5.876V26.391z"
      />
    </g>
  </g>
  <title>
    Instagram
  </title>
</svg>
`;

exports[`<Icon /> Javascript - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <path
      d="M29.116,0H10.883C4.882,0,0,4.882,0,10.883v18.234C0,35.117,4.882,40,10.883,40h18.233
		C35.118,40,40,35.117,40,29.117V10.883C40,4.882,35.118,0,29.116,0z M37.5,29.117c0,4.621-3.76,8.383-8.384,8.383H10.883
		C6.26,37.5,2.5,33.738,2.5,29.117V10.883C2.5,6.261,6.26,2.5,10.883,2.5h18.233c4.624,0,8.384,3.761,8.384,8.383V29.117z"
    />
    <path
      d="M23.518,23.374c0,2.228,1.813,4.039,4.039,4.039h2.79c0.851,0,1.54,0.691,1.54,1.541
		c0,0.849-0.689,1.539-1.54,1.539h-6.829v2.5h6.829c2.229,0,4.041-1.813,4.041-4.039c0-2.229-1.813-4.041-4.041-4.041h-2.79
		c-0.848,0-1.539-0.69-1.539-1.539s0.691-1.539,1.539-1.539h6.831v-2.501h-6.831C25.33,19.334,23.518,21.146,23.518,23.374z"
    />
    <path
      d="M18.862,28.954c0,0.849-0.689,1.539-1.539,1.539c-0.848,0-1.539-0.69-1.539-1.539v-2.79h-2.5v2.79
		c0,2.227,1.811,4.039,4.039,4.039s4.04-1.813,4.04-4.039v-9.62h-2.501V28.954z"
    />
  </g>
  <title>
    Javascript
  </title>
</svg>
`;

exports[`<Icon /> LinkedIn - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <g>
      <rect
        height="11.52"
        width="1.752"
        x="12.991"
        y="15.482"
      />
      <path
        d="M13.867,11.685c-0.347,0-0.684,0.14-0.929,0.386c-0.245,0.245-0.386,0.581-0.386,0.929
			c0,0.343,0.141,0.683,0.386,0.929c0.245,0.245,0.582,0.385,0.929,0.385s0.684-0.14,0.929-0.385
			c0.245-0.246,0.386-0.585,0.386-0.929c0-0.348-0.141-0.688-0.386-0.929C14.551,11.825,14.214,11.685,13.867,11.685z"
      />
      <path
        d="M22.134,15.459c-1.188,0-2.277,0.428-3.124,1.137v-1.114h-1.752v4.853v4v2.666h1.752v-2.666v-4
			c0-1.722,1.401-3.124,3.124-3.124c1.722,0,3.123,1.401,3.123,3.124v6.667h1.752v-6.667C27.009,17.646,24.821,15.459,22.134,15.459
			z"
      />
      <path
        d="M26.391,5.981H13.61c-4.207,0-7.629,3.423-7.629,7.629v12.78c0,4.207,3.422,7.629,7.629,7.629h12.78
			c4.206,0,7.628-3.422,7.628-7.629V13.61C34.019,9.404,30.597,5.981,26.391,5.981z M32.267,26.391c0,3.24-2.637,5.877-5.876,5.877
			H13.61c-3.241,0-5.876-2.637-5.876-5.877V13.61c0-3.24,2.635-5.876,5.876-5.876h12.78c3.239,0,5.876,2.636,5.876,5.876V26.391z"
      />
    </g>
  </g>
  <title>
    LinkedIn
  </title>
</svg>
`;

exports[`<Icon /> Momentive - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <path
      d="M22.475,18.391L4.988,29.765h20.863v-0.874c0-3.48-1.002-6.858-2.9-9.77L22.475,18.391z M10.878,28.018
   l11.067-7.198c1.27,2.199,2,4.658,2.137,7.198H10.878z"
    />
    <g>
      <path
        d="M8.807,25.197V12.742c4.375,0.234,8.293,2.215,11.068,5.256l1.479-0.962
     c-3.286-3.715-8.083-6.063-13.421-6.063H7.06v15.36L8.807,25.197z"
      />
    </g>
    <g>
      <path
        d="M23.939,17.438l0.476,0.73c0.16,0.245,0.312,0.494,0.46,0.745l8.391-5.457v14.562h-5.688
     C27.59,28.309,27.6,28.6,27.6,28.891v0.874h7.412V10.235L23.939,17.438z"
      />
    </g>
  </g>
  <title>
    Momentive
  </title>
</svg>
`;

exports[`<Icon /> Next - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <path
      d="M29.882,10.116C27.242,7.477,23.732,6.024,20,6.024h-0.001c-3.733,0-7.243,1.454-9.883,4.094
		c-2.639,2.64-4.093,6.15-4.092,9.883c0,7.707,6.27,13.976,13.975,13.976h0.002c3.733-0.002,7.243-1.455,9.882-4.094
		c2.641-2.641,4.094-6.15,4.094-9.884C33.977,16.266,32.521,12.756,29.882,10.116z M28.648,28.646
		c-0.521,0.521-1.082,0.986-1.674,1.398l-9.999-14.907h-0.178h-0.874h-0.874l0.001,11.006h1.747l0-8.136l8.673,12.931
		c-1.678,0.842-3.54,1.289-5.472,1.289l-0.001,0.873v-0.873c-6.742,0-12.228-5.484-12.228-12.228c0-3.266,1.271-6.338,3.581-8.647
		c2.309-2.31,5.38-3.582,8.647-3.582c0.001,0,0.001,0,0.001,0c3.266,0,6.337,1.271,8.646,3.581c2.311,2.309,3.582,5.38,3.582,8.646
		C32.229,23.266,30.957,26.336,28.648,28.646z"
    />
    <polygon
      points="23.201,15.137 23.201,21.283 24.949,23.889 24.947,15.137 	"
    />
  </g>
  <title>
    Next
  </title>
</svg>
`;

exports[`<Icon /> NodeJS - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <path
      d="M19.999,0L2.679,10v20l5.676,3.277c0.002-0.002,0.006-0.002,0.009-0.004
		c0.675,0.367,1.448,0.578,2.27,0.578c2.621,0,4.754-2.133,4.754-4.754V13.704h-2.476v15.394c0,1.256-1.021,2.277-2.278,2.277
		c-0.465,0-0.897-0.141-1.259-0.383c-0.008,0.002-2.632-1.504-2.632-1.504L5.156,28.57V11.43l14.843-8.571l14.846,8.571V28.57
		l-14.846,8.57l-4.576-2.642c-0.711,0.631-1.544,1.124-2.462,1.437L19.999,40l17.322-10V10L19.999,0z"
    />
    <path
      d="M26.821,25.5h-9.241v2.477h9.241c2.48,0,4.496-2.018,4.496-4.498c0-2.479-2.016-4.497-4.496-4.497h-4.744
		c-1.115,0-2.02-0.906-2.02-2.02c0-1.114,0.904-2.021,2.02-2.021h9.24v-2.477h-9.24c-2.479,0-4.497,2.018-4.497,4.497
		c0,2.48,2.018,4.496,4.497,4.496h4.744c1.115,0,2.02,0.908,2.02,2.021C28.841,24.594,27.937,25.5,26.821,25.5z"
    />
  </g>
  <title>
    NodeJS
  </title>
</svg>
`;

exports[`<Icon /> Portfolio - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <path
    d="M28.146,8.172h1.137h1.752V6.419h-0.877H19.73H8.966v1.752H19.73v21.254v4.154h1.753V29.6
	c0.074,0.002,0.15,0.006,0.224,0.006c1.094,0,2.144-0.189,3.118-0.537l2.629,4.512h1.014h1.016l-3.064-5.258
	c2.759-1.621,4.615-4.619,4.615-8.042V9.924h-1.752V20.28c0,4.177-3.398,7.574-7.575,7.574c-0.073,0-0.149,0-0.224-0.004V8.172
	H28.146z"
  />
  <title>
    Portfolio
  </title>
</svg>
`;

exports[`<Icon /> Probot - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <path
      d="M30.509,13.957h-9.636v-2.345c1.152-0.37,1.99-1.451,1.99-2.726c0-1.579-1.285-2.862-2.863-2.862
		c-1.579,0-2.863,1.283-2.863,2.862c0,1.274,0.837,2.355,1.989,2.726v2.345H9.49c-1.686,0-3.057,1.372-3.057,3.058v13.904
		c0,1.688,1.371,3.059,3.057,3.059h21.019c1.687,0,3.058-1.371,3.058-3.059V17.014C33.566,15.329,32.195,13.957,30.509,13.957z
		 M18.884,8.886c0-0.615,0.501-1.116,1.116-1.116s1.115,0.501,1.115,1.116s-0.5,1.116-1.115,1.116S18.884,9.501,18.884,8.886z
		 M31.819,30.918c0,0.723-0.588,1.311-1.311,1.311H9.49c-0.722,0-1.31-0.588-1.31-1.311V17.014c0-0.723,0.588-1.311,1.31-1.311
		h21.019c0.723,0,1.311,0.588,1.311,1.311V30.918z"
    />
    <path
      d="M19.441,22.26c0-2.749-2.236-4.984-4.984-4.984c-2.749,0-4.984,2.235-4.984,4.984
		c0,2.748,2.235,4.984,4.984,4.984C17.205,27.244,19.441,25.008,19.441,22.26z M14.457,25.498c-1.785,0-3.237-1.453-3.237-3.238
		c0-1.785,1.452-3.238,3.237-3.238s3.237,1.453,3.237,3.238C17.694,24.045,16.242,25.498,14.457,25.498z"
    />
    <path
      d="M25.543,17.276c-2.749,0-4.985,2.235-4.985,4.984c0,2.748,2.236,4.984,4.985,4.984
		c2.748,0,4.984-2.236,4.984-4.984C30.527,19.511,28.291,17.276,25.543,17.276z M25.543,25.498c-1.786,0-3.238-1.453-3.238-3.238
		c0-1.785,1.452-3.238,3.238-3.238c1.785,0,3.237,1.453,3.237,3.238C28.78,24.045,27.328,25.498,25.543,25.498z"
    />
    <path
      d="M14.457,20.951c-0.343,0-0.682,0.141-0.926,0.381c-0.245,0.244-0.385,0.584-0.385,0.93
		c0,0.342,0.14,0.682,0.385,0.926c0.244,0.244,0.583,0.385,0.926,0.385s0.682-0.141,0.926-0.385
		c0.245-0.244,0.385-0.584,0.385-0.926c0-0.346-0.14-0.686-0.385-0.93C15.139,21.092,14.803,20.951,14.457,20.951z"
    />
    <path
      d="M25.543,20.951c-0.346,0-0.684,0.141-0.929,0.381c-0.241,0.244-0.381,0.584-0.381,0.93
		c0,0.342,0.14,0.682,0.381,0.926c0.248,0.244,0.583,0.385,0.929,0.385c0.344,0,0.682-0.141,0.927-0.385
		c0.244-0.248,0.384-0.584,0.384-0.926c0-0.346-0.14-0.682-0.384-0.93C26.225,21.092,25.887,20.951,25.543,20.951z"
    />
    <path
      d="M22.262,27.791h-4.523c-0.982,0-1.781,0.801-1.781,1.783s0.799,1.781,1.781,1.781h4.523
		c0.982,0,1.781-0.799,1.781-1.781S23.244,27.791,22.262,27.791z M18.303,30.309h-0.564c-0.404,0-0.733-0.33-0.733-0.734
		s0.329-0.734,0.733-0.734h0.564V30.309z M20.648,30.309H19.35V28.84h1.299V30.309z M22.262,30.309h-0.565V28.84h0.565
		c0.404,0,0.732,0.33,0.732,0.734S22.666,30.309,22.262,30.309z"
    />
  </g>
  <title>
    Probot
  </title>
</svg>
`;

exports[`<Icon /> Python - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <path
      d="M35.624,10.958h-4.232V4.374C31.392,1.962,29.427,0,27.016,0H16.019c-2.413,0-4.375,1.962-4.375,4.374v4.92
		H4.375C1.962,9.294,0,11.257,0,13.669v10.999c0,2.412,1.962,4.374,4.375,4.374h4.234v6.583c0,2.412,1.962,4.375,4.374,4.375h10.999
		c2.411,0,4.374-1.963,4.374-4.375v-4.92h7.268c2.413,0,4.377-1.962,4.377-4.374V15.334C40.001,12.922,38.037,10.958,35.624,10.958z
		 M9.858,18.75c-0.688,0-1.249,0.56-1.249,1.25v6.542H4.375c-1.034,0-1.875-0.841-1.875-1.874V13.669
		c0-1.034,0.841-1.875,1.875-1.875h8.518h8.715c0.69,0,1.251-0.56,1.251-1.251c0-0.69-0.561-1.25-1.251-1.25h-7.464v-4.92
		c0-1.033,0.842-1.874,1.875-1.874h10.997c1.034,0,1.876,0.841,1.876,1.874v7.835v6.541H9.858z M37.5,26.331
		c0,1.033-0.841,1.875-1.876,1.875h-8.517h-8.715c-0.69,0-1.25,0.56-1.25,1.25s0.56,1.249,1.25,1.249h7.464v4.92
		c0,1.034-0.84,1.875-1.874,1.875H12.983c-1.033,0-1.874-0.841-1.874-1.875v-7.832V21.25h19.03c0.691,0,1.252-0.561,1.252-1.25
		v-6.542h4.232c1.035,0,1.876,0.84,1.876,1.875V26.331z"
    />
    <path
      d="M16.655,5.009c-0.233,0.236-0.37,0.555-0.37,0.885c0,0.33,0.137,0.65,0.37,0.885
		c0.23,0.229,0.556,0.365,0.882,0.365c0.329,0,0.654-0.135,0.884-0.365c0.236-0.235,0.365-0.555,0.365-0.885
		c0-0.33-0.129-0.649-0.365-0.885C17.956,4.544,17.115,4.544,16.655,5.009z"
    />
    <path
      d="M22.461,35.354c0.329,0,0.651-0.129,0.885-0.364c0.23-0.229,0.366-0.555,0.366-0.885
		s-0.136-0.65-0.366-0.885c-0.464-0.466-1.304-0.466-1.769,0c-0.231,0.234-0.365,0.555-0.365,0.885s0.134,0.655,0.365,0.885
		C21.812,35.225,22.131,35.354,22.461,35.354z"
    />
  </g>
  <title>
    Python
  </title>
</svg>
`;

exports[`<Icon /> React - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <circle
      cx="19.992"
      cy="19.995"
      r="2.629"
    />
    <path
      d="M40,20c0-3.15-3.383-5.467-8.094-6.874C33.043,8.343,32.727,4.254,30,2.679
		c-0.652-0.375-1.395-0.566-2.211-0.566c-2.266,0-5.012,1.506-7.79,4.111c-2.779-2.605-5.523-4.111-7.791-4.111
		c-0.813,0-1.557,0.191-2.209,0.566C7.273,4.254,6.957,8.343,8.094,13.126C3.384,14.533,0,16.85,0,20
		c0,3.149,3.384,5.467,8.094,6.874c-1.138,4.783-0.822,8.872,1.905,10.445c0.653,0.377,1.396,0.568,2.211,0.568
		c2.267,0,5.012-1.507,7.79-4.11c2.778,2.604,5.524,4.11,7.79,4.11c0.816,0,1.559-0.191,2.211-0.568
		c2.729-1.573,3.043-5.662,1.906-10.445C36.617,25.467,40,23.149,40,20z M27.789,4.612c0.377,0,0.689,0.077,0.961,0.231
		c1.377,0.796,1.652,3.712,0.73,7.661c-1.504-0.324-3.09-0.57-4.711-0.733c-0.98-1.373-1.988-2.631-3.006-3.751
		C24.164,5.784,26.338,4.612,27.789,4.612z M11.958,22.955c0.23,0.43,0.465,0.857,0.708,1.277c0.247,0.427,0.496,0.844,0.75,1.255
		c-0.772-0.116-1.514-0.252-2.221-0.403C11.418,24.394,11.672,23.684,11.958,22.955z M11.195,14.916
		c0.708-0.151,1.449-0.287,2.221-0.403c-0.253,0.411-0.503,0.827-0.75,1.255c-0.243,0.42-0.478,0.848-0.708,1.277
		C11.672,16.317,11.418,15.607,11.195,14.916z M13.253,20c0.473-0.979,0.999-1.978,1.58-2.983c0.583-1.013,1.182-1.966,1.787-2.86
		c1.088-0.078,2.215-0.124,3.38-0.124c1.165,0,2.293,0.046,3.381,0.124c0.604,0.895,1.201,1.848,1.785,2.86
		c0.582,1.006,1.105,2.004,1.58,2.983c-0.475,0.979-0.998,1.977-1.58,2.983c-0.584,1.013-1.184,1.965-1.787,2.859
		c-1.088,0.079-2.215,0.123-3.379,0.123c-1.163,0-2.291-0.044-3.378-0.123c-0.604-0.895-1.203-1.847-1.789-2.859
		C14.252,21.977,13.726,20.979,13.253,20z M26.582,14.513c0.773,0.116,1.514,0.252,2.223,0.403
		c-0.223,0.691-0.477,1.401-0.762,2.129c-0.232-0.431-0.469-0.857-0.711-1.277C27.086,15.34,26.836,14.924,26.582,14.513z
		 M27.332,24.232c0.242-0.42,0.479-0.848,0.711-1.277c0.285,0.729,0.539,1.438,0.762,2.129c-0.709,0.151-1.449,0.287-2.223,0.403
		C26.836,25.076,27.086,24.659,27.332,24.232z M20,9.817c0.49,0.541,0.981,1.119,1.475,1.741c-0.492-0.016-0.983-0.024-1.475-0.024
		c-0.49,0-0.983,0.009-1.477,0.024C19.017,10.937,19.51,10.358,20,9.817z M11.25,4.844c0.271-0.154,0.584-0.231,0.959-0.231
		c1.454,0,3.627,1.172,6.028,3.408c-1.018,1.12-2.027,2.378-3.005,3.751c-1.623,0.163-3.209,0.409-4.711,0.733
		C9.598,8.556,9.873,5.64,11.25,4.844z M8.77,24.463C4.888,23.287,2.5,21.59,2.5,20s2.387-3.287,6.269-4.463
		c0.47,1.469,1.054,2.971,1.729,4.463C9.824,21.49,9.24,22.993,8.77,24.463z M11.25,35.154c-1.376-0.794-1.652-3.71-0.73-7.66
		c1.502,0.325,3.088,0.571,4.711,0.732c0.98,1.377,1.99,2.635,3.009,3.758C15.221,34.799,12.567,35.917,11.25,35.154z M20,30.19
		c-0.489-0.542-0.983-1.126-1.479-1.749c0.494,0.016,0.987,0.025,1.479,0.025c0.492,0,0.987-0.01,1.479-0.025
		C20.982,29.064,20.49,29.648,20,30.19z M28.75,35.154c-1.318,0.763-3.971-0.355-6.99-3.17c1.02-1.123,2.027-2.381,3.01-3.758
		c1.621-0.161,3.209-0.407,4.711-0.732C30.402,31.444,30.127,34.359,28.75,35.154z M31.23,24.463
		c-0.471-1.47-1.055-2.973-1.729-4.463c0.674-1.492,1.258-2.994,1.729-4.463C35.111,16.713,37.5,18.41,37.5,20
		S35.111,23.287,31.23,24.463z"
    />
  </g>
  <title>
    React
  </title>
</svg>
`;

exports[`<Icon /> Resume - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <rect
      height="1.752"
      width="14.018"
      x="12.991"
      y="27.842"
    />
    <rect
      height="1.754"
      width="14.018"
      x="12.991"
      y="23.504"
    />
    <rect
      height="1.752"
      width="4.721"
      x="22.288"
      y="19.167"
    />
    <path
      d="M12.979,20.919h6.681v-3.341c0-1.028-0.468-1.949-1.201-2.562c0.439-0.501,0.708-1.156,0.708-1.874
		c0-1.57-1.277-2.848-2.848-2.848s-2.848,1.277-2.848,2.848c0,0.718,0.269,1.372,0.708,1.874c-0.733,0.613-1.201,1.534-1.201,2.562
		V20.919z M16.32,12.048c0.604,0,1.095,0.491,1.095,1.095c0,0.604-0.491,1.096-1.095,1.096c-0.604,0-1.095-0.491-1.095-1.096
		C15.225,12.54,15.716,12.048,16.32,12.048z M14.732,17.579c0-0.875,0.712-1.588,1.588-1.588c0.876,0,1.588,0.713,1.588,1.588v1.588
		h-3.176V17.579z"
    />
    <polygon
      points="29.638,32.266 10.362,32.266 10.362,7.733 21.313,7.733 21.313,5.981 8.61,5.981 8.61,34.02 
		31.39,34.02 31.39,16.057 29.638,16.057 	"
    />
    <path
      d="M24.306,5.981h-1.239v1.752v3.943v2.628h2.629h3.942h1.752v-1.239L24.306,5.981z M24.819,12.552v-3.58
		l3.579,3.58H24.819z"
    />
  </g>
  <title>
    Resume
  </title>
</svg>
`;

exports[`<Icon /> SQL - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <path
      d="M20,0C12.546,0,5,2.093,5,6.094v9.27v9.271v9.271C5,37.907,12.546,40,20,40
		c7.453,0,15.001-2.093,15.001-6.094v-9.271v-9.271v-9.27C35.001,2.093,27.453,0,20,0z M32.501,33.906
		c0,1.221-4.412,3.594-12.501,3.594S7.5,35.127,7.5,33.906v-5.75c2.833,1.698,7.684,2.572,12.5,2.572
		c4.815,0,9.667-0.874,12.501-2.572V33.906z M32.501,24.635c0,1.22-4.412,3.594-12.501,3.594S7.5,25.854,7.5,24.635v-5.749
		c2.833,1.697,7.684,2.571,12.5,2.571c4.815,0,9.667-0.874,12.501-2.571V24.635z M32.501,15.363c0,1.22-4.412,3.594-12.501,3.594
		S7.5,16.583,7.5,15.363V9.614c2.833,1.697,7.684,2.573,12.5,2.573c4.815,0,9.667-0.876,12.501-2.573V15.363z M20,9.687
		c-8.089,0-12.5-2.374-12.5-3.593S11.911,2.5,20,2.5s12.501,2.374,12.501,3.594S28.089,9.687,20,9.687z"
    />
    <path
      d="M21.351,16.945c0.324,0,0.648-0.135,0.879-0.364c0.234-0.235,0.369-0.555,0.369-0.885
		c0-0.33-0.135-0.649-0.369-0.884c-0.465-0.466-1.3-0.466-1.766,0c-0.234,0.235-0.364,0.555-0.364,0.884
		c0,0.331,0.13,0.65,0.364,0.885C20.695,16.811,21.02,16.945,21.351,16.945z"
    />
    <path
      d="M25.669,16.337c0.33,0,0.651-0.137,0.885-0.371c0.23-0.23,0.365-0.55,0.365-0.881
		c0-0.33-0.135-0.654-0.365-0.884c-0.464-0.465-1.299-0.465-1.769,0c-0.23,0.23-0.366,0.555-0.366,0.884
		c0,0.331,0.136,0.651,0.366,0.881C25.021,16.2,25.339,16.337,25.669,16.337z"
    />
    <path
      d="M29.749,15.211c0.331,0,0.65-0.135,0.881-0.365c0.234-0.235,0.37-0.554,0.37-0.885
		c0-0.33-0.136-0.65-0.37-0.885c-0.465-0.465-1.301-0.465-1.766,0c-0.235,0.235-0.365,0.556-0.365,0.885
		c0,0.331,0.13,0.65,0.365,0.885C29.095,15.076,29.419,15.211,29.749,15.211z"
    />
    <path
      d="M21.351,26.216c0.324,0,0.648-0.13,0.879-0.364c0.234-0.23,0.369-0.556,0.369-0.885
		c0-0.325-0.135-0.651-0.369-0.881c-0.465-0.47-1.3-0.47-1.766,0c-0.234,0.229-0.364,0.551-0.364,0.881
		c0,0.329,0.13,0.654,0.364,0.885C20.695,26.086,21.02,26.216,21.351,26.216z"
    />
    <path
      d="M25.669,25.605c0.33,0,0.651-0.135,0.885-0.365c0.23-0.233,0.365-0.555,0.365-0.885
		c0-0.329-0.135-0.648-0.365-0.884c-0.464-0.466-1.299-0.466-1.769,0c-0.23,0.235-0.366,0.555-0.366,0.884
		c0,0.33,0.136,0.651,0.366,0.885C25.021,25.471,25.339,25.605,25.669,25.605z"
    />
    <path
      d="M29.749,24.48c0.326,0,0.65-0.135,0.881-0.364C30.864,23.881,31,23.562,31,23.23
		c0-0.33-0.136-0.649-0.37-0.885c-0.465-0.465-1.301-0.465-1.766,0c-0.235,0.235-0.365,0.555-0.365,0.885
		c0,0.331,0.13,0.65,0.365,0.886C29.095,24.346,29.419,24.48,29.749,24.48z"
    />
    <path
      d="M21.351,35.491c0.324,0,0.648-0.136,0.879-0.37c0.234-0.229,0.369-0.555,0.369-0.881
		c0-0.33-0.135-0.654-0.369-0.885c-0.465-0.464-1.3-0.464-1.766,0c-0.234,0.23-0.364,0.555-0.364,0.885
		c0,0.326,0.13,0.651,0.364,0.881C20.695,35.355,21.02,35.491,21.351,35.491z"
    />
    <path
      d="M25.669,34.875c0.33,0,0.651-0.129,0.885-0.364c0.23-0.234,0.365-0.556,0.365-0.885
		c0-0.33-0.135-0.65-0.365-0.885c-0.464-0.466-1.305-0.466-1.769,0c-0.23,0.234-0.366,0.555-0.366,0.885
		c0,0.329,0.136,0.65,0.366,0.885C25.021,34.746,25.339,34.875,25.669,34.875z"
    />
    <path
      d="M29.749,33.752c0.326,0,0.65-0.131,0.881-0.366C30.864,33.156,31,32.83,31,32.501
		c0-0.325-0.136-0.649-0.37-0.88c-0.465-0.47-1.301-0.466-1.766,0c-0.235,0.23-0.365,0.55-0.365,0.88
		c0,0.329,0.13,0.655,0.365,0.885C29.095,33.621,29.419,33.752,29.749,33.752z"
    />
  </g>
  <title>
    SQL
  </title>
</svg>
`;

exports[`<Icon /> Slack - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <path
      d="M14.747,0c-2.402,0-4.355,1.952-4.355,4.354s1.953,4.355,4.355,4.355h4.354V4.354
		C19.101,1.952,17.147,0,14.747,0z M16.602,6.21h-1.855c-1.023,0-1.855-0.832-1.855-1.855c0-1.022,0.832-1.854,1.855-1.854
		c1.022,0,1.855,0.832,1.855,1.854V6.21z"
    />
    <path
      d="M25.283,18.303c2.402,0,4.355-1.955,4.355-4.355V5.649c0-2.4-1.953-4.354-4.355-4.354
		c-2.4,0-4.354,1.954-4.354,4.356v8.297C20.93,16.35,22.883,18.303,25.283,18.303z M23.43,5.649c0-1.023,0.83-1.854,1.854-1.854
		s1.855,0.831,1.855,1.854v8.299c0,1.022-0.832,1.854-1.855,1.854s-1.854-0.831-1.854-1.854V5.649z"
    />
    <path
      d="M14.714,21.697c-2.401,0-4.354,1.954-4.354,4.355v8.298c0,2.4,1.953,4.354,4.354,4.354
		c2.401,0,4.355-1.954,4.355-4.356v-8.296C19.069,23.65,17.115,21.697,14.714,21.697z M16.569,34.351
		c0,1.023-0.832,1.854-1.854,1.854s-1.855-0.831-1.855-1.854v-8.298c0-1.023,0.833-1.854,1.855-1.854s1.854,0.831,1.854,1.854
		V34.351z"
    />
    <path
      d="M35.645,10.393c-2.402,0-4.355,1.953-4.355,4.354v4.355h4.355C38.047,19.101,40,17.146,40,14.746
		S38.045,10.393,35.645,10.393z M35.643,16.603h-1.854v-1.856c0-1.021,0.832-1.854,1.855-1.854c1.021,0,1.854,0.833,1.854,1.854
		C37.498,15.77,36.666,16.602,35.643,16.603z"
    />
    <path
      d="M34.348,20.931h-8.297c-2.402,0-4.355,1.953-4.355,4.354c0,2.402,1.953,4.355,4.357,4.355h8.295
		c2.402,0,4.355-1.953,4.355-4.355C38.703,22.884,36.75,20.931,34.348,20.931z M34.348,27.14h-8.297
		c-1.023,0-1.854-0.832-1.854-1.855c0-1.021,0.83-1.854,1.854-1.854h8.297c1.025,0,1.857,0.832,1.857,1.854
		C36.205,26.308,35.373,27.14,34.348,27.14z"
    />
    <path
      d="M0,25.252c0,2.402,1.952,4.356,4.353,4.356c2.402,0,4.355-1.954,4.355-4.356v-4.354H4.353
		C1.952,20.898,0,22.852,0,25.252z M6.209,25.252c0,1.023-0.833,1.856-1.856,1.856c-1.021,0-1.854-0.833-1.854-1.856
		c0-1.021,0.832-1.854,1.854-1.854h1.856V25.252z"
    />
    <path
      d="M5.65,19.069h8.296c2.402,0,4.356-1.953,4.356-4.354s-1.954-4.355-4.357-4.355H5.649
		c-2.401,0-4.354,1.954-4.354,4.355S3.248,19.069,5.65,19.069z M5.649,12.859h8.297c1.023,0,1.855,0.832,1.855,1.855
		c0,1.022-0.832,1.855-1.855,1.855H5.649c-1.023,0-1.855-0.833-1.855-1.855C3.794,13.691,4.626,12.859,5.649,12.859z"
    />
    <path
      d="M25.252,31.29h-4.355v4.355c0,2.4,1.955,4.354,4.355,4.354s4.355-1.954,4.355-4.354
		C29.607,33.243,27.652,31.29,25.252,31.29z M25.252,37.5c-1.023,0-1.855-0.832-1.855-1.854V33.79h1.855
		c1.023,0,1.854,0.832,1.854,1.855C27.105,36.668,26.275,37.5,25.252,37.5z"
    />
  </g>
  <title>
    Slack
  </title>
</svg>
`;

exports[`<Icon /> StackOverflow - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <g>
      <polygon
        points="28.751,32.086 10.178,32.086 10.178,24.264 8.426,24.264 8.426,33.838 30.503,33.838 
			30.503,24.264 28.751,24.264 		"
      />
      <rect
        height="1.753"
        width="12.423"
        x="13.217"
        y="27.25"
      />
      <rect
        height="1.752"
        transform="matrix(0.9752 0.2214 -0.2214 0.9752 5.6936 -3.8017)"
        width="12.415"
        x="13.595"
        y="22.616"
      />
      <rect
        height="1.752"
        transform="matrix(0.8998 0.4363 -0.4363 0.8998 10.4488 -7.3585)"
        width="12.513"
        x="14.987"
        y="18.191"
      />
      <rect
        height="1.753"
        transform="matrix(0.7604 0.6495 -0.6495 0.7604 15.4507 -11.8986)"
        width="12.554"
        x="17.574"
        y="14.114"
      />
      <rect
        height="1.752"
        transform="matrix(0.5874 0.8093 -0.8093 0.5874 20.7288 -17.1397)"
        width="12.564"
        x="20.893"
        y="10.885"
      />
    </g>
  </g>
  <title>
    StackOverflow
  </title>
</svg>
`;

exports[`<Icon /> Storybook - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <path
      d="M8.58,7.278l0.926,25.943l21.914,0.797V5.982L8.58,7.278z M29.673,32.207l-18.479-0.674L10.387,8.925
		l15.216-0.863v2.661l0.874-0.699l0.873,0.699V7.962l2.323-0.132V32.207z"
    />
    <path
      d="M20.188,13.817c1.414,0,2.563,1.15,2.563,2.563h1.747c0-2.377-1.934-4.311-4.311-4.311
		s-4.311,1.934-4.311,4.311s1.934,4.311,4.311,4.311c1.414,0,2.563,1.15,2.563,2.563c0,1.414-1.149,2.564-2.563,2.564
		c-1.413,0-2.563-1.15-2.563-2.564h-1.747c0,2.377,1.934,4.311,4.311,4.311s4.311-1.934,4.311-4.311
		c0-2.375-1.934-4.309-4.311-4.309c-1.413,0-2.563-1.15-2.563-2.564C17.624,14.967,18.774,13.817,20.188,13.817z"
    />
  </g>
  <title>
    Storybook
  </title>
</svg>
`;

exports[`<Icon /> SurveyMonkey - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <path
      d="M33.627,20.283c-0.545,0-1.052,0.149-1.49,0.405c-0.487-2.334-1.641-4.48-3.366-6.207
		c-2.017-2.014-4.561-3.189-7.191-3.523l2.003-2.002l-1.235-1.235L20,10.068l-2.349-2.347l-1.234,1.235l2.002,2.002
		c-2.631,0.334-5.175,1.509-7.191,3.523c-1.725,1.727-2.877,3.873-3.367,6.207c-0.438-0.256-0.945-0.405-1.49-0.405
		c-1.636,0-2.97,1.333-2.97,2.97c0,1.639,1.334,2.971,2.97,2.971c0.545,0,1.053-0.148,1.49-0.406
		c0.379,1.813,1.159,3.508,2.294,4.984l2.29-1.553c-0.402-4.885,1.065-8.342,2.961-8.677c1.192-0.206,2.636,0.784,3.862,2.659
		l0.73,1.119l0.731-1.119c1.227-1.875,2.672-2.869,3.862-2.659c1.896,0.335,3.363,3.794,2.961,8.677l2.289,1.553
		c1.136-1.475,1.916-3.172,2.294-4.984c0.438,0.258,0.945,0.406,1.49,0.406c1.638,0,2.97-1.332,2.97-2.971
		C36.597,21.616,35.265,20.283,33.627,20.283z M6.371,24.476c-0.673,0-1.222-0.547-1.222-1.223c0-0.674,0.548-1.221,1.222-1.221
		c0.675,0,1.224,0.547,1.224,1.221C7.594,23.929,7.046,24.476,6.371,24.476z M29.355,28.36c0.187-5.111-1.531-8.991-4.46-9.509
		C23.24,18.561,21.5,19.436,20,21.272c-1.501-1.839-3.243-2.71-4.897-2.421c-2.93,0.518-4.645,4.397-4.46,9.509
		c-0.848-1.545-1.301-3.291-1.301-5.107c0-2.846,1.108-5.522,3.12-7.535c4.156-4.156,10.919-4.156,15.074,0
		c2.013,2.013,3.12,4.689,3.12,7.535C30.656,25.069,30.204,26.813,29.355,28.36z M33.627,24.476c-0.674,0-1.223-0.547-1.223-1.223
		c0-0.674,0.549-1.221,1.223-1.221c0.673,0,1.224,0.547,1.224,1.221C34.851,23.929,34.3,24.476,33.627,24.476z"
    />
  </g>
  <title>
    SurveyMonkey
  </title>
</svg>
`;

exports[`<Icon /> TailwindCss - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <g>
      <path
        d="M32.426,14.352c-0.011,0.017-1.124,1.649-2.792,1.649c-1.308,0-2.031-0.729-3.033-1.736
			c-1.338-1.345-3.002-3.02-6.571-3.02c-5.01,0-7.07,3.798-7.46,5.807l1.597,0.644c0.043-0.065,1.067-1.594,2.842-1.594
			c1.223,0,1.973,0.728,3.009,1.735c1.395,1.354,3.129,3.04,6.614,3.04c4.991,0,7.016-3.847,7.389-5.882L32.426,14.352z
			 M26.631,19.123c-2.772,0-4.104-1.294-5.392-2.544c-1.129-1.097-2.296-2.232-4.231-2.232c-0.361,0-0.701,0.04-1.02,0.109
			c0.866-0.803,2.152-1.457,4.041-1.457c2.839,0,4.048,1.216,5.327,2.503c1.102,1.107,2.24,2.253,4.277,2.253
			c0.363,0,0.707-0.045,1.029-0.123C29.81,18.453,28.531,19.123,26.631,19.123z"
      />
      <path
        d="M23.045,23.879c-1.308,0-2.032-0.729-3.033-1.736c-1.338-1.345-3.003-3.02-6.571-3.02
			c-5.01,0-7.07,3.798-7.46,5.806l1.597,0.645c0.043-0.064,1.068-1.594,2.842-1.594c1.223,0,1.973,0.728,3.009,1.734
			c1.394,1.354,3.129,3.041,6.614,3.041c4.99,0,7.016-3.848,7.389-5.882l-1.594-0.644C25.825,22.246,24.713,23.879,23.045,23.879z
			 M20.042,27c-2.773,0-4.104-1.294-5.392-2.544c-1.129-1.097-2.297-2.231-4.231-2.231c-0.361,0-0.701,0.04-1.02,0.109
			c0.866-0.804,2.152-1.457,4.041-1.457c2.839,0,4.047,1.216,5.327,2.503c1.101,1.107,2.239,2.252,4.277,2.252
			c0.354,0,0.69-0.042,1.005-0.115C23.196,26.333,21.923,27,20.042,27z"
      />
    </g>
  </g>
  <title>
    TailwindCss
  </title>
</svg>
`;

exports[`<Icon /> Teknologist - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <polygon
      points="27.833,26.227 14.033,26.227 14.033,27.979 29.585,27.979 29.585,12.021 27.833,12.021 	"
    />
    <polygon
      points="24.591,12.021 0,12.021 0,13.774 6.505,13.774 6.505,27.979 8.257,27.979 8.257,13.774 
		24.591,13.774 	"
    />
    <rect
      height="1.752"
      width="10.558"
      x="14.033"
      y="19.188"
    />
    <polygon
      points="40,12.021 37.569,12.021 29.902,19.995 37.431,27.979 39.839,27.979 32.322,20.006 	"
    />
  </g>
  <title>
    Teknologist
  </title>
</svg>
`;

exports[`<Icon /> TestingLibrary - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <path
    d="M31.366,25.678l-0.001,0.874L31.366,25.678h-0.041c1.619-1.363,2.65-3.401,2.65-5.678h-1.746
	c0,3.131-2.547,5.678-5.678,5.678h-0.001h-2.292c0.184-0.526,0.309-1.116,0.309-1.809c0-0.185-0.01-0.366-0.025-0.543h2.066
	c2.408,0,4.367-1.96,4.367-4.368c0-1.698-0.771-2.995-1.391-4.037c-0.348-0.583-0.675-1.134-0.675-1.473
	c0-0.093,0.081-0.141,0.114-0.156h2.402v-1.747h-2.449c-0.858,0-1.814,0.781-1.814,1.903c0,0.819,0.447,1.57,0.92,2.366
	c0.563,0.946,1.146,1.925,1.146,3.144c0,1.445-1.176,2.621-2.62,2.621h-2.537c-0.3-0.621-0.729-1.144-1.256-1.546
	c1.957-1.239,3.299-3.724,3.299-6.585c0-4.094-2.742-7.425-6.114-7.425c-3.371,0-6.114,3.331-6.114,7.425
	c0,2.861,1.342,5.345,3.299,6.584c-0.527,0.403-0.956,0.926-1.256,1.547h-2.537c-1.444,0-2.62-1.176-2.62-2.621
	c0-1.219,0.582-2.197,1.145-3.144c0.474-0.796,0.921-1.547,0.921-2.366c0-1.122-0.956-1.903-1.814-1.903H8.573v1.747h2.402
	c0.033,0.016,0.114,0.063,0.114,0.156c0,0.339-0.328,0.89-0.675,1.473c-0.62,1.042-1.391,2.339-1.391,4.037
	c0,2.408,1.959,4.368,4.367,4.368h2.066c-0.017,0.177-0.025,0.358-0.025,0.543c0,0.692,0.125,1.282,0.308,1.809h-2.291
	c-3.131,0-5.679-2.547-5.679-5.678H6.023c0,2.276,1.032,4.314,2.65,5.678H8.635v0.874v-0.874c-1.44,0.001-2.611,1.172-2.611,2.611
	s1.171,2.61,2.611,2.61v-1.746c-0.477,0-0.864-0.389-0.864-0.864c0-0.477,0.388-0.864,0.864-0.864h4.814h3.132
	c0.44,0.791,0.808,1.502,0.808,2.533c0,1.252-1.019,2.271-2.271,2.271s-2.271-1.02-2.271-2.271h-1.747
	c0,2.216,1.803,4.019,4.019,4.019s4.019-1.803,4.019-4.019c0-1.539-0.583-2.585-1.098-3.508c-0.461-0.826-0.859-1.541-0.859-2.581
	c0-2.208,1.457-2.996,2.821-2.996c1.363,0,2.821,0.788,2.821,2.996c0,1.04-0.398,1.755-0.86,2.581
	c-0.515,0.923-1.097,1.969-1.097,3.508c0,2.216,1.803,4.019,4.019,4.019s4.019-1.803,4.019-4.019h-1.747
	c0,1.252-1.02,2.271-2.271,2.271c-1.253,0-2.272-1.02-2.272-2.271c0-1.031,0.368-1.742,0.809-2.533h3.132h0.001h4.813
	c0.477,0,0.865,0.388,0.865,0.864c0,0.476-0.389,0.864-0.864,0.864v1.746c1.439,0,2.61-1.171,2.61-2.61S32.805,25.679,31.366,25.678
	z M20,19.126c-2.408,0-4.367-2.547-4.367-5.678S17.592,7.771,20,7.771c2.409,0,4.368,2.547,4.368,5.678S22.409,19.126,20,19.126z"
  />
  <title>
    TestingLibrary
  </title>
</svg>
`;

exports[`<Icon /> TurboRepo - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <g>
      <path
        d="M9.588,10.706c2.068-1.794,4.596-2.782,7.172-2.966V5.98c-3.027,0.188-6.003,1.348-8.418,3.48
			L9.588,10.706z"
      />
      <path
        d="M16.76,32.265c-2.663-0.187-5.158-1.221-7.172-2.971l-1.245,1.245c2.414,2.133,5.391,3.292,8.417,3.48
			V32.265z"
      />
      <path
        d="M18.518,5.98v1.76c2.576,0.184,5.104,1.171,7.173,2.966l1.245-1.245
			C24.521,7.328,21.545,6.168,18.518,5.98z"
      />
      <path
        d="M26.933,11.948c1.794,2.069,2.782,4.597,2.966,7.173h1.76c-0.188-3.028-1.348-6.004-3.479-8.418
			L26.933,11.948z"
      />
      <path
        d="M29.898,20.878c-0.184,2.577-1.172,5.105-2.966,7.173l1.245,1.246c2.133-2.415,3.293-5.391,3.48-8.419
			H29.898z"
      />
      <path
        d="M25.69,29.294c-2.015,1.75-4.51,2.784-7.173,2.971v1.755c3.027-0.188,6.004-1.348,8.418-3.48L25.69,29.294
			z"
      />
    </g>
    <g>
      <path
        d="M17.639,27.468c-4.118,0-7.467-3.351-7.467-7.468c0-4.118,3.35-7.468,7.467-7.468s7.467,3.35,7.467,7.468
			C25.106,24.117,21.757,27.468,17.639,27.468z M17.639,14.29c-3.149,0-5.71,2.562-5.71,5.71c0,3.149,2.562,5.71,5.71,5.71
			s5.71-2.561,5.71-5.71C23.35,16.851,20.788,14.29,17.639,14.29z"
      />
    </g>
  </g>
  <title>
    TurboRepo
  </title>
</svg>
`;

exports[`<Icon /> Typescript - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <g>
    <path
      d="M29.115,0H10.883C4.881,0,0,4.882,0,10.883v18.234C0,35.117,4.881,40,10.883,40h18.232
		C35.117,40,40,35.117,40,29.117V10.883C40,4.882,35.117,0,29.115,0z M37.5,29.117c0,4.621-3.762,8.383-8.385,8.383H10.883
		C6.26,37.5,2.5,33.738,2.5,29.117V10.883C2.5,6.261,6.26,2.5,10.883,2.5h18.232c4.623,0,8.385,3.761,8.385,8.383V29.117z"
    />
    <polygon
      points="12.418,21.835 16.073,21.835 16.073,32.993 18.574,32.993 18.574,21.835 22.229,21.835 
		22.229,19.334 12.418,19.334 	"
    />
    <path
      d="M23.518,23.374c0,2.228,1.813,4.039,4.039,4.039h2.79c0.849,0,1.539,0.691,1.539,1.541
		c0,0.849-0.69,1.539-1.539,1.539h-6.829v2.5h6.829c2.228,0,4.04-1.813,4.04-4.039c0-2.229-1.813-4.041-4.04-4.041h-2.79
		c-0.848,0-1.539-0.69-1.539-1.539s0.691-1.539,1.539-1.539h6.83v-2.501h-6.83C25.33,19.334,23.518,21.146,23.518,23.374z"
    />
  </g>
  <title>
    Typescript
  </title>
</svg>
`;

exports[`<Icon /> UnderArmour - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <path
    d="M36.597,12.737v-0.478l-0.402-0.258c-0.125-0.08-3.146-1.991-8.585-3.084l-1.046-0.21v7.549
	c0,0.564-0.139,1.104-0.381,1.609c-1.904-0.453-3.986-0.702-6.183-0.702c-2.197,0-4.279,0.249-6.183,0.702
	c-0.242-0.505-0.382-1.045-0.382-1.609V8.708l-1.045,0.21c-5.439,1.093-8.46,3.004-8.586,3.084l-0.401,0.258v0.478
	c0,2.879,1.887,5.439,4.962,7.264c-3.075,1.822-4.962,4.382-4.962,7.261v0.479l0.401,0.258c0.126,0.08,3.146,1.992,8.586,3.084
	l1.045,0.211v-7.549c0-0.566,0.14-1.105,0.382-1.609c1.903,0.451,3.985,0.701,6.183,0.701c2.196,0,4.278-0.25,6.183-0.701
	c0.242,0.504,0.381,1.043,0.381,1.609v7.549l1.046-0.211c5.438-1.092,8.46-3.004,8.586-3.084l0.401-0.258v-0.479
	c0-2.879-1.887-5.439-4.963-7.261C34.71,18.176,36.597,15.616,36.597,12.737z M11.688,23.744v5.398
	c-3.381-0.795-5.626-1.889-6.513-2.371c0.238-2.313,2.162-4.375,5.087-5.807c0.59,0.256,1.207,0.49,1.854,0.697
	C11.84,22.316,11.688,23.016,11.688,23.744z M10.263,19.036c-2.925-1.432-4.849-3.495-5.088-5.81
	c0.884-0.482,3.118-1.573,6.514-2.368v5.398c0,0.727,0.151,1.427,0.428,2.081C11.47,18.545,10.853,18.78,10.263,19.036z
	 M13.071,20.119c-0.13-0.038-0.261-0.077-0.389-0.118c0.128-0.041,0.259-0.081,0.39-0.119c0.033,0.039,0.069,0.079,0.104,0.118
	C13.142,20.04,13.105,20.079,13.071,20.119z M20,21.09c-1.571,0-3.014-0.41-4.146-1.089c1.132-0.681,2.574-1.09,4.146-1.09
	s3.014,0.409,4.146,1.09C23.014,20.68,21.571,21.09,20,21.09z M26.929,20.119c-0.035-0.04-0.07-0.079-0.105-0.119
	c0.035-0.039,0.07-0.079,0.104-0.118c0.131,0.038,0.261,0.078,0.39,0.119C27.188,20.042,27.059,20.081,26.929,20.119z
	 M34.824,26.771c-0.888,0.484-3.133,1.576-6.513,2.371v-5.398c0-0.729-0.152-1.428-0.428-2.082c0.646-0.207,1.264-0.441,1.854-0.697
	C32.661,22.396,34.585,24.459,34.824,26.771z M29.737,19.036c-0.59-0.256-1.207-0.49-1.854-0.698
	c0.275-0.654,0.428-1.354,0.428-2.081v-5.398c3.381,0.793,5.625,1.887,6.513,2.369C34.585,15.542,32.661,17.604,29.737,19.036z"
  />
  <title>
    UnderArmour
  </title>
</svg>
`;

exports[`<Icon /> Vercel - renders 1`] = `
<svg
  class="fill-current"
  height="40px"
  version="1.1"
  viewBox="0 0 40 40"
  width="40px"
  x="0px"
  y="0px"
>
  <path
    d="M20.001,2.68L0,37.32h40L20.001,2.68z M20.001,7.46L35.86,34.93H4.14L20.001,7.46z"
  />
  <title>
    Vercel
  </title>
</svg>
`;
